# Habits_Tracker_Project

./: .env.example  .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habitlog.py
htmlcov/: index.html
telegram_bot/: services.py  tasks.py  tests.py
telegram_bot/management/commands/: run_bot.py
users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_user_avatar_and_more.py
